--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,10 +8,22 @@
 
 
     <TextView
-        android:id="@+id/text_view_return"
+        android:id="@+id/text_view_html"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="HTML表示"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.15"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.807" />
+
+    <TextView
+        android:id="@+id/text_view_destination"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="目的地表示"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.179"
@@ -20,7 +32,7 @@
         app:layout_constraintVertical_bias="0.278" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/button_html"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="HTML取得"
@@ -30,5 +42,31 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.023" />
+
+
+    <Button
+        android:id="@+id/button_destination"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="目的地取得"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.15"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.471" />
+
+    <EditText
+        android:id="@+id/edit_text_destination"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="460dp"
+        android:hint="Enter Destination"
+        android:padding="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
